<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/fragment_statistics"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/relativelayout_statistics_tab"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textview_visualization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_statistics_title_word"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/normal"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollview_statistics_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativelayout_statistics_tab">

        <LinearLayout
            android:id="@+id/linearlayout_statistics_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_statistics_title_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/activity_docs_statistics_title_word"
                android:textColor="@color/black"
                android:textSize="@dimen/big"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.HorizontalBarChart
                android:id="@+id/wordBarChart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/textview_statistics_title_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/activity_docs_statistics_title_time"
                android:textColor="@color/black"
                android:textSize="@dimen/big"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/timeLineChart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/textview_statistics_title_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/activity_docs_statistics_title_score"
                android:textColor="@color/black"
                android:textSize="@dimen/big"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/gradeLineChart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressbar_statistics_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>