...
    <item
        android:id="@+id/item_main_upload"
        android:icon="@drawable/upload"
        android:title="@string/upload_cloud" />

    <item
        android:id="@+id/item_main_statistics"
        android:icon="@drawable/statistics"
        android:title="@string/statistics" />

    <item
        android:id="@+id/item_main_profile"
        android:icon="@drawable/nav_item_info"
...
