...
                android:textColor="@color/lightGray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_intro_bottom_title" />

            <LinearLayout
                android:id="@+id/button_intro_bottom_start"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/intro_button"
                android:gravity="center"
                android:visibility="invisible"
                android:onClick="@{() -> viewModel.navigateToLogin()}"
...
